--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -4,5 +4,11 @@
   <%= link_to "Contact", contact_path %>
   <%= link_to "FAQ", faq_path %>
   <%= link_to "Blogs", blogs_path %>
+  <% if current_user %>
+    <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+  <% else %>
+    <%= link_to "Register", new_user_registration_path %>
+    <%= link_to "Login", new_user_session_path %>
+  <% end %>
 
 </div>
